styles/style.css
/* universal Selector */
* {
    font-family: "Inter", sans-serif;
    margin: 0;
    padding: 0;
}

/* CSS for Navbar */
.navbar {
    display: flex;
    justify-content: space-between;

}

.logo {
    margin: 15px 0px 5px 60px;
}

.nav-links {
    list-style: none;
    display: flex;
    gap: 1rem;
    margin-top: 15px;
    padding: 15px;
    align-items: center;
}

.nav-links a {
    text-decoration: none;
    color: #575757;
}

/* CSS for button */
.register-btn {
    background-color: #1D4ED8;
    color: white;
    width: 110px;
    height: 45px;
    border-radius: 6px;
    margin: 15px 60px 5px 0px;
    cursor: pointer;
    border: none;

}

.register-btn:hover {
    background-color: #6589d7;
}

/* CSS for hero section */
.hero-section {
    /* background-image: url('../images/banner.jpg'); */
    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.5)), url('../images/banner.jpg');
    background-size: cover;
    background-position: center;
    max-width: 100%;
    height: 500px;
    color: white;
    text-align: center;
    display: flex;
    align-items: center;

}

.hero-heading {
    font-size: 2.9rem;
    text-align: center;
    margin-left: 350px;
}

.hero-paragraph {
    margin-left: 350px;
    margin-top: 20px;
}

.button {
    margin-top: 170px;
    margin-left: 350px;
}

/* speakers section */
.speakers-heading {
    font-size: 1.6rem;
    text-align: center;
    margin: 25px 0px;
}

.department {
    color: #2563EB;
    font-weight: 600;
    font-size: 12px;
    margin-bottom: 10px;
}

.speakers {
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    gap: 30px;
    margin: 0px 30px 0px 30px;
}

.speakers img {
    width: 550px;
}

.speaker-1,
.speaker-2,
.speaker-3,
.speaker-4 {
    border: 1px solid #E5E7EB;
    margin: auto;
}

.designation {
    font-size: 12px;
    color: #575757;
    padding-top: 10px;
}

.speaker-content {
    margin: 20px;
    padding: 15px;
}

/* pricing section */

.Pricing-Heading {
    font-size: 1.6rem;
    text-align: center;
    margin: 40px;
}

.pricing {
    display: flex;
    justify-content: space-between;
    margin: 0px 40px 15px 40px;
}

.pricing-content {
    color: #888888;
    font-size: 12px;
}

.list {
    color: #333333;
    font-size: 12px;

}

.price {
    color: white;
}

.pricing-blue {
    color: #93C5FD;
    font-size: 12px;
}

.list-2 {
    font-size: 12px;
    color: white;
}

.pro {
    background-color: #0D1B2A;
    border-radius: 5px;
    margin: auto;
    padding: 30px;
}

.card {
    background-color: #F8F9FB;
    border-radius: 5px;
    margin: auto;
    padding: 30px;
}

.price-content {
    margin: 5px;
    padding: 5px;
}

.pricing-btn {
    width: 160px;
    margin: 7px;
    padding: 7px;
    border-radius: 5px;
    cursor: pointer;
    font-size: 12px;
}

#basic {
    color: #2563EB;
    background-color: white;
    border: 1px solid #2563EB;
}

#pro {
    background-color: #2563EB;
    color: white;
    border: 1px solid #2563EB;
}

#team {
    background-color: white;
    color: #0D1B2A;
    border: 1px solid #0D1B2A;
}

/* Testimonials Section */
.testimonials {
    padding: 30px 60px;
    text-align: center;

}

.testimonial-container {
    display: flex;
    gap: 25px;
    justify-content: center;
    margin-top: 40px;
}

.testimonial-card {
    padding: 25px;
    border-radius: 10px;
    box-shadow: 0 4px 12px rgba(2, 0, 0, 0.1);
    width: 300px;
}

.testimonial-card p {
    font-size: 13px;
    line-height: 1.6;
    margin-bottom: 20px;
}

/* FAQ Section Starts */

.faq-item {
    background: #edf1f5;
    padding: 20px;
    border-radius: 8px;
    margin: 10px 60px;
}

.faq-item h3 {
    margin-bottom: 10px;
}

.faq-item p {
    color: #555;
    line-height: 1.6;
}

/* footer section */
.footer-section {
    background-color: #0D1B2A;

}

.footer-content {
    display: flex;
    justify-content: space-between;
    margin: 30px 60px 0px 60px;

}

.icon-section {
    color: gray;
    margin: 50px 60px 0px 60px;

}

.footer-img {
    margin: 10px 60px;
    padding: 30px;
}

.icon {
    display: flex;
    gap: 20px;
    font-size: 12px;
    align-items: center;
    cursor: pointer;
    list-style: none;
}

ul li img {
    width: 30px;
}

.copyright {
    color: gray;
    margin: auto;
    padding: 20px;
    font-size: 12px;
    text-align: center;
}

